# SW_Safety_Socket/Cloud/src/routes/user/device.routes.js
@@ -5,8 +5,10 @@ import UserDeviceController from "../../controllers/device.user.controller.js"
 const userDeviceRouter = express.Router()
 
 userDeviceRouter
-    .get('/all', asyncMiddlewareHandler(UserDeviceController.all))                      // Get all devices
-    .post('/findbymac', asyncMiddlewareHandler(UserDeviceController.findbymac))         // Find device by mac
-    .post('/claim', asyncMiddlewareHandler(UserDeviceController.claimDevice))           // Claim new device
-    .post('/setmesh', asyncMiddlewareHandler(UserDeviceController.setmesh))           // Claim new device
+    .get('/all', asyncMiddlewareHandler(UserDeviceController.all))                                      // Get all devices
+    .post('/findbymac', asyncMiddlewareHandler(UserDeviceController.findbymac))                         // Find device by mac
+    .post('/claim', asyncMiddlewareHandler(UserDeviceController.claimDevice))                           // Claim new device
+    .post('/setmesh', asyncMiddlewareHandler(UserDeviceController.setmesh))                             // Claim new device
+    .get('/history/:mac/limit/:limit', asyncMiddlewareHandler(UserDeviceController.history))            // Get device history
+
 export default userDeviceRouter
