# SW_Safety_Socket/Cloud/src/swagger/swagger.json
@@ -394,6 +394,62 @@
                 ]
             }
         },
+        "/device/history/{mac}/limit/{limit}": {
+            "get": {
+                "tags": [
+                    "user"
+                ],
+                "servers": [
+                    {
+                        "url": "http://localhost:3000",
+                        "description": "User application port"
+                    }
+                ],
+                "summary": "Show all devices",
+                "description": "",
+                "parameters": [
+                    {
+                        "name": "mac",
+                        "in": "path",
+                        "require": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "limit",
+                        "in": "path",
+                        "require": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "string"
+                                },
+                                "example": {
+                                    "devices": []
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "ACCESS_TOKEN": []
+                    },
+                    {
+                        "CLIENT_ID": []
+                    }
+                ]
+            }
+        },
         "/manf/device/signup": {
             "post": {
                 "tags": [
